--- a/styles/home.css
+++ b/styles/home.css
@@ -1,7 +1,73 @@
 /* Normalize CSS */
 html{line-height:1.15;-webkit-text-size-adjust:100%}body{margin:0}main{display:block}h1{font-size:2em;margin:.67em 0}hr{box-sizing:content-box;height:0;overflow:visible}pre{font-family:monospace,monospace;font-size:1em}a{background-color:transparent}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:bolder}code,kbd,samp{font-family:monospace,monospace;font-size:1em}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}img{border-style:none}button,input,optgroup,select,textarea{font-family:inherit;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}button,[type="button"],[type="reset"],[type="submit"]{-webkit-appearance:button}button::-moz-focus-inner,[type="button"]::-moz-focus-inner,[type="reset"]::-moz-focus-inner,[type="submit"]::-moz-focus-inner{border-style:none;padding:0}button:-moz-focusring,[type="button"]:-moz-focusring,[type="reset"]:-moz-focusring,[type="submit"]:-moz-focusring{outline:1px dotted ButtonText}fieldset{padding:.35em .75em .625em}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}progress{vertical-align:baseline}textarea{overflow:auto}[type="checkbox"],[type="radio"]{box-sizing:border-box;padding:0}[type="number"]::-webkit-inner-spin-button,[type="number"]::-webkit-outer-spin-button{height:auto}[type="search"]{-webkit-appearance:textfield;outline-offset:-2px}[type="search"]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details{display:block}summary{display:list-item}template{display:none}[hidden]{display:none}
 
+.slide-1, .slide-2, .slide-3 {
+  position: relative;
+}
 
-body {
+.slide-1, .slide-3 {
   background: #F5EEDC;
+  color: #454545;
+  background-image: url("../images/square-tiles.png");
+  width: 100%;
+  height: 100dvh;
+}
+
+.slide-2 {
+  background: #C0D8C0;
+  color: #454545;
+  background-image: url("../images/square-tiles.png");
+  width: 100%;
+  height: 100dvh;
+}
+
+footer {
+  background: #C0D8C0;
+  color: #454545;
+  background-image: url("../images/square-tiles.png");
+  width: 100%;
+  height: 20dvh;
+}
+
+h1 {
+  margin: 0 0.2em;
+  font-family: 'Raleway';
+  font-weight: 600;
+  font-size: 4em;
+  text-align: center;
+}
+
+h1.accent {
+  color: #DD4A48;
+}
+
+.name-box {
+  top: 30dvh;
+  width: 100%;
+  position: relative;
+
+}
+
+section {
+  font-weight: 400;
+  font-family: "poppins";
+}
+
+.quote {
+  width: 100%;
+  bottom: 10dvh;
+  position: absolute;
+}
+
+.quote-content {
+  font-size: 18px;
+  width: 300px;
+  margin: auto;
+  text-align: center;
+}
+
+.quote .role {
+  margin: 8px;
+  color: #DD4A48;
+  font-weight: 400;
 }
