--- a/styles/home.css
+++ b/styles/home.css
@@ -1,29 +1,26 @@
 /* Normalize CSS */
 html{line-height:1.15;-webkit-text-size-adjust:100%}body{margin:0}main{display:block}h1{font-size:2em;margin:.67em 0}hr{box-sizing:content-box;height:0;overflow:visible}pre{font-family:monospace,monospace;font-size:1em}a{background-color:transparent}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:bolder}code,kbd,samp{font-family:monospace,monospace;font-size:1em}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}img{border-style:none}button,input,optgroup,select,textarea{font-family:inherit;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}button,[type="button"],[type="reset"],[type="submit"]{-webkit-appearance:button}button::-moz-focus-inner,[type="button"]::-moz-focus-inner,[type="reset"]::-moz-focus-inner,[type="submit"]::-moz-focus-inner{border-style:none;padding:0}button:-moz-focusring,[type="button"]:-moz-focusring,[type="reset"]:-moz-focusring,[type="submit"]:-moz-focusring{outline:1px dotted ButtonText}fieldset{padding:.35em .75em .625em}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}progress{vertical-align:baseline}textarea{overflow:auto}[type="checkbox"],[type="radio"]{box-sizing:border-box;padding:0}[type="number"]::-webkit-inner-spin-button,[type="number"]::-webkit-outer-spin-button{height:auto}[type="search"]{-webkit-appearance:textfield;outline-offset:-2px}[type="search"]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details{display:block}summary{display:list-item}template{display:none}[hidden]{display:none}
 
+body {
+  font-weight: 400;
+  font-family: "poppins";
+  color: #454545;
+}
+
 .slide-1, .slide-2, .slide-3 {
   position: relative;
 }
 
 .slide-1, .slide-3 {
   background: #F5EEDC;
-  color: #454545;
   width: 100%;
   height: 100dvh;
 }
 
 .slide-2 {
   background: #C0D8C0;
-  color: #454545;
   width: 100%;
   height: 100dvh;
-}
-
-footer {
-  background: #454545;
-  color: #F5EEDC;
-  width: 100%;
-  height: 20dvh;
 }
 
 h1 {
@@ -43,11 +40,6 @@ h1.accent {
   width: 100%;
   position: relative;
 
-}
-
-section {
-  font-weight: 400;
-  font-family: "poppins";
 }
 
 .quote {
@@ -125,6 +117,35 @@ section {
   margin-right: 0.5em;
 }
 
+footer {
+  display: flex;
+  align-items: center;
+  background: #454545;
+  color: #F5EEDC;
+  width: 100%;
+}
+
+.copyrights {
+  flex-grow: 1;
+  margin: 1em;
+  font-size: 0.8em;
+}
+
+.social-icons {
+  margin: 1em;
+}
+
+.social-icons .icon-button {
+  padding: 0.25em;
+  min-width: auto;
+}
+
+.social-icons .icon-button-img {
+  margin-right: 0;
+  width: 1.5em;
+  height: 1.5em;
+}
+
 @media only screen and (max-device-width: 480px) {
   .slide-2 .profile-box {
     flex-direction: column-reverse;
@@ -150,5 +171,13 @@ section {
   
   .icon-button {
     min-width: auto;
+  }
+
+  footer {
+    flex-direction: column-reverse;
+  }
+
+  footer .copyrights {
+    text-align: center;
   }
 }
