Add some minor fixes

--- a/styles/home.css
+++ b/styles/home.css
@@ -98,6 +98,10 @@ h1.accent {
   margin-right: 8em;
 }
 
+.slide-3 .profile-info {
+  margin-right: 0;
+}
+
 .profile-pic img {
   width: 240px;
   height: 240px;
@@ -111,11 +115,10 @@ h1.accent {
   background-color: #454545;
   border-radius: 0.1em;
   display: inline-block;
-  padding: 0.5em;
+  padding: 0.5em 0.8em;
   margin-right: 0.25em;
   color: #EEE;
   text-decoration: none;
-  min-width: 6em;
   display: inline-flex;
   align-items: center;
 }
@@ -147,7 +150,6 @@ footer {
 
 .social-icons .icon-button {
   padding: 0.25em;
-  min-width: auto;
 }
 
 .social-icons .icon-button-img {
@@ -177,10 +179,6 @@ footer {
     margin: 1em auto;
     width: 200px;
     height: 200px;
-  }
-  
-  .icon-button {
-    min-width: auto;
   }
 
   footer {
