--- a/styles/home.css
+++ b/styles/home.css
@@ -11,7 +11,7 @@ body {
   color: #454545;
 }
 
-.slide-1, .slide-2, .slide-3 {
+.slide-1, .slide-2, .slide-3, .slide-4 {
   position: relative;
   scroll-snap-align: start;
 
@@ -23,7 +23,7 @@ body {
   height: 100dvh;
 }
 
-.slide-2 {
+.slide-2, .slide-4 {
   background: #C0D8C0;
   width: 100%;
   height: 100dvh;
@@ -67,7 +67,6 @@ h1.accent {
   font-weight: 400;
 }
 
-
 .profession {
   margin: 0;
   font-size: 2em;
@@ -75,7 +74,7 @@ h1.accent {
   font-family: 'Raleway';
 }
 
-.slide-2, .slide-3 {
+.slide-2, .slide-3, .slide-4 {
   display: flex;
   flex-direction: column;
 }
@@ -88,6 +87,17 @@ h1.accent {
   max-width: 800px;
   margin: auto;
   margin-top: 1em;
+}
+
+.offering-header {
+  display: flex;
+  align-items: center;
+  gap: 0.5em;
+}
+
+.offering-icon {
+  width: 1.5em;
+  height: 1.5em;
 }
 
 .profile-box {
@@ -158,12 +168,21 @@ footer {
   height: 1.5em;
 }
 
+.unravel-logo {
+  font-family: "Saira";
+  color: #364E68;
+}
+
+.unravel-logo .unravel-logo-hl {
+  color: #3282B8;
+}
+
 @media only screen and (max-device-width: 480px) {
   .slide-2 .profile-box {
     flex-direction: column-reverse;
   }
 
-  .slide-2 .slide-content, .slide-3 .slide-content {
+  .slide-2 .slide-content, .slide-3 .slide-content, .slide-4 .slide-content {
     margin: 0 1em;
   }
 
